add additional resources

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc && chmod 755 build/index.js",
+    "start": "node build/index.js"
   },
   "files": [
     "build"
