--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -89,6 +89,7 @@
     "ai": "^4.3.15",
     "braintrust": "^0.0.193",
     "common-tags": "^1",
+    "csv": "^6.3.11",
     "deep-equal": "^2.2.3",
     "dotenv": "^16.3.1",
     "exponential-backoff": "^3.1.1",
@@ -99,6 +100,7 @@
     "ignore": "^5.3.2",
     "langchain": "^0.3.5",
     "mongodb": "^6.3.0",
+    "mongodb-schema": "^12.6.2",
     "openai": "^4.95.0",
     "rimraf": "^6.0.1",
     "simple-git": "^3.27.0",
