WIP - promptmaxx eval for atlas vector search

--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -44,10 +44,12 @@
     "@huggingface/hub": "^1.0.1",
     "@supercharge/promise-pool": "^3.2.0",
     "@types/unist": "^3.0.2",
+    "autoevals": "^0.0.129",
+    "common-tags": "^1.8.2",
     "csv": "^6.3.9",
     "gpt-tokenizer": "^2.8.1",
-    "langchain": "^0.3.14",
     "lang-map": "^0.4.0",
+    "langchain": "^0.3.14",
     "llamaindex": "^0.2.9",
     "lodash.samplesize": "^4.2.0",
     "mongodb-rag-core": "*",
