--- a/packages/datasets/tsconfig.json
+++ b/packages/datasets/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "outDir": "./build",
   },
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "./synthesizedEvals/**/*.ts"]
 }
