--- a/packages/chatbot-server-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-server-mongodb-public/environments/staging.yml
@@ -10,7 +10,7 @@ env:
   NODE_ENV: staging
   OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
   OPENAI_API_VERSION: "2024-06-01"
-  OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
+  OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4.1
   OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
   OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
   BRAINTRUST_CHATBOT_TRACING_PROJECT_NAME: "chatbot-responses-staging"
