find uningested docs sites

--- a/packages/ingest-mongodb-public/tsconfig.json
+++ b/packages/ingest-mongodb-public/tsconfig.json
@@ -3,5 +3,8 @@
   "compilerOptions": {
     "outDir": "./build"
   },
-  "include": ["./src/**/*.ts"]
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.d.ts"
+  ]
 }
