--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -31,6 +31,7 @@
     "./mongodb": "./build/mongodb.js",
     "./mongoDbMetadata": "./build/mongoDbMetadata/index.js",
     "./openai": "./build/openai.js",
+    "./aiSdk": "./build/aiSdk.js",
     "./braintrust": "./build/braintrust.js",
     "./dataSources": "./build/dataSources/index.js",
     "./models": "./build/models/index.js",
@@ -75,6 +76,8 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.21",
+    "@ai-sdk/openai": "^1.3.20",
     "@apidevtools/swagger-parser": "^10.1.0",
     "@langchain/anthropic": "^0.3.6",
     "@langchain/community": "^0.3.10",
@@ -83,7 +86,7 @@
     "@supercharge/promise-pool": "^3.2.0",
     "acquit": "^1.3.0",
     "acquit-require": "^0.1.1",
-    "ai": "^4.3.9",
+    "ai": "^4.3.16",
     "braintrust": "^0.0.193",
     "common-tags": "^1",
     "deep-equal": "^2.2.3",
