--- a/packages/scripts/environments/staging.yml
+++ b/packages/scripts/environments/staging.yml
@@ -50,7 +50,7 @@ cronJobs:
     backoffLimit: 3
 
   - name: verify-sources-have-pages-staging
-    schedule: "0 8 * * *" # every day at 8am UTC
+    schedule: "0 0 * * *" # every day at midnight UTC
     command: "npm run scripts:verifyPagesInSources"
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-staging
