--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7",
     "@release-it/keep-a-changelog": "^4.0.0",
+    "@tsd/typescript": "^5.8.2",
     "@types/common-tags": "^1",
     "@types/deep-equal": "^1.0.4",
     "@types/express": "^4.17.17",
@@ -67,6 +68,7 @@
     "eslint-plugin-tsdoc": "^0.2.14",
     "express": "^4.19.2",
     "jest": "^29",
+    "jest-tsd": "^0.2.2",
     "mongodb-memory-server": "^10.1.2",
     "node-mocks-http": "^1.16.1",
     "prettier": "^2",
