--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -32,7 +32,6 @@
     "./mongodb": "./build/mongodb.js",
     "./mongoDbMetadata": "./build/mongoDbMetadata/index.js",
     "./openai": "./build/openai.js",
-    "./aiSdk": "./build/aiSdk.js",
     "./braintrust": "./build/braintrust.js",
     "./dataSources": "./build/dataSources/index.js",
     "./models": "./build/models/index.js",
@@ -42,7 +41,8 @@
   "scripts": {
     "clean": "rm -rf build",
     "build": "tsc -b tsconfig.build.json",
-    "test": "jest --forceExit",
+    "test": "jest --forceExit && npm run test:types",
+    "test:types": "tstyche",
     "lint": "eslint ./src --ext ts,tsx,js,jsx --report-unused-disable-directives",
     "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
@@ -52,7 +52,6 @@
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7",
     "@release-it/keep-a-changelog": "^4.0.0",
-    "@tsd/typescript": "^5.8.2",
     "@types/common-tags": "^1",
     "@types/deep-equal": "^1.0.4",
     "@types/express": "^4.17.17",
@@ -68,13 +67,13 @@
     "eslint-plugin-tsdoc": "^0.2.14",
     "express": "^4.19.2",
     "jest": "^29",
-    "jest-tsd": "^0.2.2",
     "mongodb-memory-server": "^10.1.2",
     "node-mocks-http": "^1.16.1",
     "prettier": "^2",
     "release-it": "^16.2.1",
     "ts-jest": "^29",
     "ts-node": "^10",
+    "tstyche": "^4.0.2",
     "typedoc": "^0",
     "typescript": "^5"
   },
