--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "lerna clean",
     "build": "lerna run build",
     "test": "lerna run test",
+    "test:types": "lerna run test:types",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint:fix",
     "release:chat-ui": "lerna run release --scope='mongodb-chatbot-ui' && git add ./package-lock.json && git commit --amend --no-edit",
