--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -32,6 +32,7 @@
     "./mongodb": "./build/mongodb.js",
     "./mongoDbMetadata": "./build/mongoDbMetadata/index.js",
     "./openai": "./build/openai.js",
+    "./aiSdk": "./build/aiSdk.js",
     "./braintrust": "./build/braintrust.js",
     "./dataSources": "./build/dataSources/index.js",
     "./models": "./build/models/index.js",
@@ -101,7 +102,7 @@
     "ignore": "^5.3.2",
     "langchain": "^0.3.5",
     "mongodb": "^6.3.0",
-    "openai": "^5.6.0",
+    "openai": "^4.95.0",
     "rimraf": "^6.0.1",
     "simple-git": "^3.27.0",
     "toml": "^3.0.0",
