--- a/packages/mongodb-chatbot-server/package.json
+++ b/packages/mongodb-chatbot-server/package.json
@@ -55,6 +55,7 @@
     "rate-limit-mongo": "^2.3.2",
     "stream-json": "^1.8.0",
     "winston": "^3.9.0",
+    "zod": "^3.25.67",
     "zod-error": "^1.5.0"
   },
   "devDependencies": {
