--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -9,6 +9,7 @@
     "node": ">=18",
     "npm": ">=8"
   },
+  "exports": "./build/index.js",
   "scripts": {
     "clean": "rm -rf build",
     "build": "tsc -b",
