--- a/packages/scripts/environments/staging.yml
+++ b/packages/scripts/environments/staging.yml
@@ -51,7 +51,7 @@ cronJobs:
 
   - name: verify-sources-have-pages-staging
     schedule: "0 0 * * *" # every day at midnight UTC
-    command: ["npm", "run", "scripts:verifyPagesInSources"]
+    command: ["npm", "run", "scripts:verifyPagesInSource"]
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-staging
     envSecrets:
