--- a/packages/scripts/environments/staging.yml
+++ b/packages/scripts/environments/staging.yml
@@ -65,6 +65,26 @@ cronJobs:
         memory: 5Gi
     backoffLimit: 2
 
+  - name: process-citations-for-metrics
+    schedule: "0 1 * * *" # every day at 1 AM UTC
+    command: "npm run scripts:getLLMAnswers"
+    env:
+      MONGODB_DATABASE_NAME: docs-chatbot-staging
+      PROFOUND_API_URL: https://api.tryprofound.com/v1
+      PROFOUND_API_KEY_NAME: education-ai
+    envSecrets:
+      MONGODB_CONNECTION_URI: docs-chatbot-staging
+      PROFOUND_API_KEY: docs-chatbot-staging
+      PROFOUND_CATALOG_ID_EDU: docs-chatbot-staging
+    resources:
+      requests:
+        cpu: 100m
+        memory: 2Gi
+      limits:
+        cpu: 500m
+        memory: 5Gi
+    backoffLimit: 2
+
 # Alerts
 defaultAlerts:
   enabled: true
