--- a/packages/scripts/environments/production.yml
+++ b/packages/scripts/environments/production.yml
@@ -58,7 +58,7 @@ cronJobs:
 
   - name: process-citations-for-metrics
     schedule: "0 3 * * *" # every day at 3 AM UTC
-    command: "npm run scripts:getLLMAnswers"
+    command: ["npm", "run", "scripts:getLLMAnswers"]
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-prod
       PROFOUND_API_URL: https://api.tryprofound.com/v1
